--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -1,4 +1,4 @@
-.profile-image{
+/* .profile-image{
     max-width:150px;
     max-height: 150px;
     border: 2-x solid rgb(167, 103, 103);
@@ -15,4 +15,27 @@
    
 }
 
+ */
 
+
+
+ .user-profile-container {
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+    margin: 0 auto;
+    max-width: 600px;
+  }
+  
+  .profile-header {
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  
+  .profile-header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 8px;
+  }
+  
