--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -62,7 +62,7 @@
 
 </mat-card> -->
 
-
+<!-- 
 
 <mat-card>
     <div class="contianer">
@@ -71,7 +71,7 @@
                 <div class="container text-center " >
                     <img src="../../../assets/profile.jpg" alt="profile image" class="profile-image ml20"/>
                     <h1>Account details</h1>
-                    <!-- <h1 class="mt20">{{user.firstname}} {{user.lastname}}</h1> -->
+                    <h1 class="mt20">{{user.firstname}} {{user.lastname}}</h1> 
                 </div>
             </div>
 
@@ -130,7 +130,8 @@
             </div>
         </div>
     </div>
-  </mat-card>
+  </mat-card> -->
+  
   
 
  
