--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -143,7 +143,8 @@
                             <form>
                                 <mat-card class="cards"
                                     style=" margin: 20px;font-size:18px; color: white;text-align: center; background-color: rgb(86, 82, 82);">
-                                    Question {{ currentPage + 1 }}
+                                    <!-- Question {{ currentPage + 1 }} -->
+                                    
                                 </mat-card>
 
                                 <!-- <div *ngIf="currentQuestions"> -->
