--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -11,6 +11,9 @@
 
 <!-- {{sectionB | json}} -->
 <!-- {{questionWithAnswers | json}} -->
+
+
+<!-- {{reportData|json}} -->
 <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
     text="Preparing results please wait...!"></ngx-ui-loader>
 <div ngxUiLoaderBlurred (blur)="10">
@@ -26,6 +29,7 @@
                 </ng-container>
 
                 <div class="watermark">
+
                     <div class="caption">
                         <!--DISPLAY IF BOTH THERORY AND OBJ -->
                         <!-- <p *ngIf="answeredQuestions.length > 0 && questionWithAnswers.length > 0" id="cape">University of Cape Coast.<br>
@@ -42,8 +46,8 @@
 
 
 
-                        <!--DISPLAY IF ONLY THERORY -->
-                        <div *ngIf="answeredQuestions; else elseBlock">
+                        <!--DISPLAY IF ONLY THEORY -->
+                        <div *ngIf="geminiResponse; else elseBlock">
                             <p id="cape">
                                 University of Cape Coast.<br>
                                 School of Physical Sciences. <br>Department of Computer Science and Information
@@ -72,23 +76,18 @@
                             </p>
                         </ng-template>
 
-
-
                     </div>
 
-
-
-
-                    <!-- <div *ngIf="reportData"> -->
-                    <div id="marks" *ngFor="let r of reportData">
-                        <p>Total Marks A & B : <span id="marksU">{{r.marks + getGrandTotalMarks()}}</span></p>
-                        <p>Marks : <span id="marksU">{{r.marks}}/{{ r.quiz.maxMarks}}</span></p>
-                        <p> Correct Answers : {{r.marks}}</p>
-                        <p>Attempted questions : {{attempted}}</p>
-                        <!-- YOU MAY ADD THIS ATTEMPTED OPTION IN THE BACKEND REPORT CLASS THEN FETCH REPORT AND SHOW ON THE INTERFACE -->
-                        <!-- <p>Attempted questions : {{attempted}}</p> -->
+                    <div *ngIf="reportData !=null">
+                        <div id="marks" *ngFor="let r of reportData">
+                            <p>Total Marks A & B : <span id="marksU">{{r.marks + getGrandTotalMarks()}}</span></p>
+                            <p>Marks : <span id="marksU">{{r.marks}}/{{ r.quiz.maxMarks}}</span></p>
+                            <p> Correct Answers : {{r.marks}}</p>
+                            <p>Attempted questions : {{attempted}}</p>
+                            <!-- YOU MAY ADD THIS ATTEMPTED OPTION IN THE BACKEND REPORT CLASS THEN FETCH REPORT AND SHOW ON THE INTERFACE -->
+                            <!-- <p>Attempted questions : {{attempted}}</p> -->
+                        </div>
                     </div>
-                    <!-- </div> -->
 
 
                     <!-- </div> -->
@@ -135,7 +134,6 @@
                     <!-- END OF SECTION A -->
 
                     <!-- LOAD SECTION B HERE -->
-
                     <!-- <div *ngIf="answeredQuestions !=null">
                         <div *ngIf="getPrefixes().length>0">
                             <h1 style="text-align: center;">Section B</h1>
@@ -149,7 +147,6 @@
                                             <p><strong>{{ question.quesNo }}:</strong> {{ question.question }} (2 out of
                                                 {{ question.marks
                                                 }})</p>
-
                                         </div>
                                     </mat-card-content>
                                 </mat-card>
