All is working fine, only OBJ, Only theory and both OBJ and Theory

--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -70,11 +70,7 @@ text="Loading instructions"
 
                     <mat-card-actions>
                         <!-- Action -->
-                        <!-- <div class=" container text-center" *ngIf="!isLegible">
-                            <button mat-raised-button color="primary" class="" (click)="startQuiz()">Start Quiz</button>
-                        </div> -->
-
-                        <div class=" container text-center">
+                        <div class=" container text-center" *ngIf="!isLegible">
                             <button mat-raised-button color="primary" class="" (click)="startQuiz()">Start Quiz</button>
                         </div>
 
