--- a/src/app/pages/user/load-quiz/load-quiz.component.css
+++ b/src/app/pages/user/load-quiz/load-quiz.component.css
@@ -10,3 +10,11 @@
      background-image: url(../../../../assets/logo3.jpg);
      background-size: cover;
 }
+
+
+
+.disabled-button {
+    color: #a9a9a9;
+    cursor: not-allowed;  
+  }
+  
