--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -59,7 +59,7 @@
           <mat-card-header>
             <mat-card-title>
               {{ currentDate | date:'fullDate' }},
-               <!-- {{ currentDate | date:'shortTime' }} -->
+              <!-- {{ currentDate | date:'shortTime' }} -->
             </mat-card-title>
             <mat-card-subtitle>
               {{allUsers}}
@@ -77,11 +77,15 @@
 
     </div>
 
-    <!-- {{cateGory|json}}  -->
 
-    <!-- {{associatedQuizzes| json}} -->
 
-    <!-- {{selectedCategoryId}} -->
+    <!-- {{cateGory|json}} 
+
+    {{associatedQuizzes| json}}
+
+    {{selectedCategoryId}} -->
+
+    {{reportsData| json}}
 
     <!-- QUIZ STATISTICS -->
     <mat-card class="mt20">
@@ -183,6 +187,7 @@
                   <mat-icon mat-list-icon class="icon-position">edit</mat-icon>
                   Course Name <br>
                   <label>{{ courseName }}</label>
+
                 </mat-card-title>
               </mat-card-header>
             </mat-card>
@@ -194,8 +199,7 @@
 
 
 
-
-      <div *ngIf="reportsData.length>0">
+      <!-- <div *ngIf="reportsData.length>0"> -->
         <div>
           &nbsp;&nbsp;<button mat-flat-button color="accent" (click)="exportexcel()">Export as Excel </button>
 
@@ -214,13 +218,24 @@
           </ng-container>
 
           <ng-container matColumnDef="marks">
-            <th mat-header-cell *matHeaderCellDef> Marks </th>
+            <th mat-header-cell *matHeaderCellDef> OBJ Marks </th>
             <td mat-cell *matCellDef="let element">{{ element.marks }}</td>
           </ng-container>
+
+          <!--<ng-container matColumnDef="theory">
+            <th mat-header-cell *matHeaderCellDef> Theory Marks </th>
+            <td mat-cell *matCellDef="let element">{{ element.marksB }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef> Total Marks </th>
+            <td mat-cell *matCellDef="let element">{{ 60 }}</td>
+          </ng-container> -->
+
           <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
           <tr mat-row *matRowDef="let row; columns: displayColumn;"></tr>
         </table>
-      </div>
+      <!-- </div> -->
 
 
 
@@ -302,9 +317,9 @@
           <mat-card class="mt20">
             <mat-card-content>
               <!-- <div> -->
-                   <div id="chartContainer" style="height: 360px; width: 100%;"></div>
+              <div id="chartContainer" style="height: 360px; width: 100%;"></div>
 
-                <!-- <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart> -->
+              <!-- <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart> -->
               <!-- </div> -->
             </mat-card-content>
           </mat-card>
@@ -316,5 +331,5 @@
 
       <!-- {{cateGory | json}} -->
 
-      <!-- {{chartDataPoints | json}}
-      {{allUsers | json}} -->
+      <!-- {{chartDataPoints | json}} -->
+      <!-- {{allUsers | json}} -->
