commiting solution for the get quiz by QuiId

--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -335,7 +335,7 @@
 
 
 
-      <!-- {{cateGory | json}} -->
+      {{reportsData | json}}
 
       <!-- {{chartDataPoints | json}} -->
       <!-- {{allUsers | json}} -->
