--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -200,11 +200,6 @@
         </div>
       </div>
 
-      <!-- Table Section -->
-
-    
-
-
       <div *ngIf="reportsData.length>0">
         <div>
           &nbsp;&nbsp;<button mat-flat-button color="accent" (click)="exportexcel()">Export as Excel </button>
@@ -235,7 +230,7 @@
 
           <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef> Total Marks </th>
-            <td mat-cell *matCellDef="let element">{{ AandB }}</td>
+            <td mat-cell *matCellDef="let element">{{ (element.marksB + element.marks) }}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
@@ -335,7 +330,7 @@
 
 
 
-      {{reportsData | json}}
+      <!-- {{reportsData | json}} -->
 
       <!-- {{chartDataPoints | json}} -->
       <!-- {{allUsers | json}} -->
