--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -259,12 +259,12 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
 
           <mat-card class="mt20">
 
             <mat-card-header>
-              <!-- <div mat-card-avatar class="example-header-image"></div> -->
+              <div mat-card-avatar class="example-header-image"></div>
               <mat-card-title>
                 Unique Participants
               </mat-card-title>
@@ -308,13 +308,13 @@
 
             </mat-card-actions>
           </mat-card>
-        </div>
+        </div> -->
 
 
 
 
 
-        <div class="col-md-8">
+        <div class="col-md-12">
           <mat-card class="mt20">
             <mat-card-content>
               <!-- <div> -->
