Committing the scaling of the X axis marks

--- a/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -21,7 +21,7 @@
         <!-- <button mat-flat-button color="accent" class="ml20" [routerLink]="'/admin/update-quiz/'+ q.qId ">Update</button> -->
 
         <button mat-flat-button color="accent" (click)="openUpdateDialog(q.qId, updateObj)"> Update
-            2</button>
+        </button>
 
         <button mat-flat-button color="accent" class="ml20">Attempts</button>
         <button mat-flat-button color="warn" class="ml20" (click)="deleteQuiz(q.qId)">Delete</button>
