--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -54,9 +54,9 @@
                 <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinner.gif">
                 Sign in</button>
             </form>
-            <button type="button" class="login-with-google-btn" (click)="signInWithGoogle()">
+            <!-- <button type="button" class="login-with-google-btn" (click)="signInWithGoogle()">
               Sign in with Google
-            </button>
+            </button> -->
 
             <!-- <a [routerLink]="['/oauth2/authorization/google']" class="login-with-google-btn">
                 Sign in with Google
