Now Add sectBMarks working

--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -269,7 +269,7 @@
 
     <!-- QUESTIONS LOAD AFTER SUBMIT -->
     <!-- questions -->
-    <div class="bootstrap-wrapper" *ngIf="isSubmit">
+    <!-- <div class="bootstrap-wrapper" *ngIf="isSubmit">
         <div class="row mt20">
             <div class="col-md-6 offset-md-3">
                 <ng-container>
@@ -281,14 +281,14 @@
                     <div class="col-md-6 offset-md-8">
                         <h3>Marks : {{marksGot}}/{{maxMarks}}</h3>
                         <h3> Correct Answers : {{correctAnswers}}</h3>
-                        <h3>Attempted questions : {{attempted}}</h3>
+                        <h3>Attempted questions : {{attempted}}</h3> -->
 
 
                         <!-- <app-print-quiz [attempts]="attempteed"></app-print-quiz>                -->
 
 
-                    </div>
-                </div>
+                    <!-- </div>
+                </div> -->
 
                 <!-- <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
 
@@ -324,9 +324,9 @@
                     </mat-card-content>
                 </mat-card> -->
 
-            </div>
+            <!-- </div>
         </div>
-    </div>
+    </div> -->
 
 
 
